--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,4 +34,5 @@ jobs:
       with:
         push: true
         tags: dekoeky/counter:latest
+        platforms: linux/amd64,linux/arm64,arm32v7
         
