--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,5 +34,5 @@ jobs:
       with:
         push: true
         tags: dekoeky/counter:latest
-        platforms: linux/amd64,linux/arm64,arm32v7
+        platforms: linux/amd64,linux/arm64,linux/arm32v7
         
