--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,5 +34,14 @@ jobs:
       with:
         push: true
         tags: dekoeky/counter:latest
-        platforms: linux/amd64,linux/arm64,linux/arm32v7
+        platforms: |
+          linux/amd64
+          linux/arm64
+          linux/arm32v7
+          linux/arm32v6
+          linux/arm64v8
+          linux/i386
+          linux/ppc64le
+          linux/riscv64
+          linux/s390x
         
