--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,16 +34,20 @@ jobs:
       with:
         push: true
         tags: dekoeky/counter:latest
+        # platforms: |
+        #   linux/amd64
+        #   linux/arm64
+        #   linux/arm32v7
+        #   linux/arm32v6
+        #   linux/arm64v8
+        #   linux/i386
+        #   linux/ppc64le
+        #   linux/riscv64
+        #   linux/s390x
         platforms: |
           linux/amd64
           linux/arm64
-          linux/arm32v7
-          linux/arm32v6
-          linux/arm64v8
-          linux/i386
-          linux/ppc64le
-          linux/riscv64
-          linux/s390x
+          linux/arm/v7
     
     
     # This step copies the local README.md to the Docker Hub General Page
