--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,19 @@ jobs:
     steps:
     - name: Checkout the code
       uses: actions/checkout@v4
+      with:
+        # Needed for GitVersion:
+        fetch-depth: 0
+
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v3.2.1
+      with:
+        versionSpec: '6.3.x'
+
+    - name: Run GitVersion
+      id: gitversion
+      uses: gittools/actions/gitversion/execute@v3.2.1
+
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
@@ -33,7 +46,9 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         push: true
-        tags: dekoeky/counter:latest
+        tags: |
+          dekoeky/counter:${{ steps.gitversion.outputs.semVer }}
+          dekoeky/counter:latest
         platforms: |
             linux/amd64
             linux/arm/v6
